--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   font_awesome_flutter: ^10.10.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -38,9 +39,9 @@ dependencies:
 dev_dependencies:
   build_runner: 2.4.13
   flutter_lints: ^5.0.0
-  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
