--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^9.0.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
@@ -35,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^10.10.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   build_runner: 2.4.13
