--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^10.10.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.20.2
   modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
